[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = ENV,build,.tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    pygrambank
    tests
omit =
    src/pygrambank/commands/add_feature_column.py
    src/pygrambank/commands/check_conflicts.py
    src/pygrambank/commands/conflicts.py
    src/pygrambank/commands/merge_conflicts.py
    src/pygrambank/commands/merge_contrib.py
    src/pygrambank/commands/roundtrip.py
    src/pygrambank/commands/stats.py
    src/pygrambank/commands/recode.py
    src/pygrambank/commands/updatefeatures.py
    src/pygrambank/commands/issue*

[coverage:report]
show_missing = true
skip_covered = true

